customtests/tests/expected/accesspath1.err
tests/accesspath1.scala:18: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj#r1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = up.r1  // should error
                ^
tests/accesspath1.scala:22: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @mutable#r1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = mp.r1  // should error
                ^
tests/accesspath1.scala:24: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#u1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = rp.u1  // should error
                ^
tests/accesspath1.scala:25: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#m1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = rp.m1  // should error
                ^
tests/accesspath1.scala:26: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#r1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = rp.r1  // should error
                ^
tests/accesspath1.scala:30: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#u1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = rp.u1.u1  // should error
                   ^
tests/accesspath1.scala:34: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#u1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = rp.m1.u1  // should error
                   ^
tests/accesspath1.scala:36: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#u1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = up.r1.u1  // should error
                   ^
tests/accesspath1.scala:37: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#u1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = mp.r1.u1  // should error
                   ^
tests/accesspath1.scala:38: error: mutability mismatch:
 found   : accesspath1.this.PathObj @readonly(accesspath1.this.PathObj @readonly#u1)
 required: accesspath1.this.PathObj(accesspath1.this.up)
	up = rp.r1.u1  // should error
                   ^
10 errors found
